kubernetes/apollo/apps/monitoring/kube-ops-view/tailscale/ingress.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ops-view-tailscale
  labels:
    tailscale.com/proxy-class: tailscale-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kube-ops-view
      port:
        name: http
  tls:
    - hosts:
        - kube-ops-view-apollo
